--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,14 @@
 <!-- Create your form here -->
+
+<h1>New Student Form</h1>
+<form action="students_path" method="post">
+  <%= form_tag students_path do %>
+  <label>First name:</label><br>
+  <%= text_field_tag :'first_name' %><br>
+  <label>Last name:</label><br>
+  <%= text_field_tag :'last_name' %><br>
+
+  <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+  <%= submit_tag "Submit Student" %>
+<% end %>
+</form>
